--- a/component/backend/language/it-IT/it-IT.com_pizzabox.ini
+++ b/component/backend/language/it-IT/it-IT.com_pizzabox.ini
@@ -25,6 +25,14 @@ PIZZABOX_PUBLISH_SUCCESS="%s elemento/i correttamente "
 PIZZABOX_PUBLISHED="pubblicato/i"
 PIZZABOX_UNPUBLISHED="spubblicato/i"
 
+PIZZABOX_ADDRESS="Indirizzo"
+PIZZABOX_ADDRESS_NAME="Nome"
+PIZZABOX_ADDRESS_STREET="Via"
+PIZZABOX_ADDRESS_ZIP="CAP"
+PIZZABOX_ADDRESS_CITY="Città"
+PIZZABOX_ADDRESS_STATE="Provincia"
+PIZZABOX_ADDRESS_COUNTRY="Nazione"
+
 ; Options
 COM_PIZZABOX_CONFIGURATION="Configurazione GiBi PizzaBox"
 
