--- a/component/frontend/language/it-IT.com_pizzabox.ini
+++ b/component/frontend/language/it-IT.com_pizzabox.ini
@@ -41,7 +41,8 @@ PIZZABOX_ITEMS_PER_PAGE="Elementi per pagina"
 PIZZABOX_PAYPAL="Paga con PayPal"
 PIZZABOX_ORDER_TOTAL="Totale ordine"
 
-PIZZABOX_DELIVERY_ADDRESS="Indirizzo consegna (optional)"
+PIZZABOX_DELIVERY_ADDRESS="Indirizzo di consegna (opzionale)"
+PIZZABOX_DELIVERY_ADDRESS_EMPTY="Nessuno"
 PIZZABOX_DELIVERY_ADDRESS_NAME="Nome"
 PIZZABOX_DELIVERY_ADDRESS_STREET="Via"
 PIZZABOX_DELIVERY_ADDRESS_ZIP="CAP"
