--- a/component/backend/language/en-GB/en-GB.com_pizzabox.ini
+++ b/component/backend/language/en-GB/en-GB.com_pizzabox.ini
@@ -25,6 +25,14 @@ PIZZABOX_PUBLISH_SUCCESS="%s item(s) successfully "
 PIZZABOX_PUBLISHED="published"
 PIZZABOX_UNPUBLISHED="unpublished"
 
+PIZZABOX_ADDRESS="Address"
+PIZZABOX_ADDRESS_NAME="Name"
+PIZZABOX_ADDRESS_STREET="Street"
+PIZZABOX_ADDRESS_ZIP="ZIP Code"
+PIZZABOX_ADDRESS_CITY="City"
+PIZZABOX_ADDRESS_STATE="State"
+PIZZABOX_ADDRESS_COUNTRY="Country"
+
 ; Params
 COM_PIZZABOX_CONFIGURATION="GiBi PizzaBox configuration"
 
