--- a/component/frontend/language/en-GB.com_pizzabox.ini
+++ b/component/frontend/language/en-GB.com_pizzabox.ini
@@ -42,6 +42,7 @@ PIZZABOX_PAYPAL="Pay with PayPal"
 PIZZABOX_ORDER_TOTAL="Order total"
 
 PIZZABOX_DELIVERY_ADDRESS="Delivery address (optional)"
+PIZZABOX_DELIVERY_ADDRESS_EMPTY="None"
 PIZZABOX_DELIVERY_ADDRESS_NAME="Name"
 PIZZABOX_DELIVERY_ADDRESS_STREET="Street"
 PIZZABOX_DELIVERY_ADDRESS_ZIP="ZIP Code"
