Redmine #2995 add missing lang strings.
Also I've updated the component version in the XML install file.

--- a/component/backend/language/it-IT/it-IT.com_pizzabox.ini
+++ b/component/backend/language/it-IT/it-IT.com_pizzabox.ini
@@ -1,11 +1,11 @@
-; @version		    $Id: it-IT.com_pizzabox.ini 2012-09-18 09:33:00Z zanardi $
+; @version		    $Id: it-IT.com_pizzabox.ini 2013-03-28 20:41:00Z zanardi $
 ; @package		    GiBi PizzaBox
 ; @author         GiBiLogic snc
 ; @authorEmail    info@gibilogic.com
 ; @authorUrl      http://www.gibilogic.com
-; @copyright	    Copyright (C) 2011-2012 GiBiLogic. All rights reserved.
+; @copyright	    Copyright (C) 2011-2013 GiBiLogic. All rights reserved.
 ; @license		    GNU/GPL v2 or later
-; @description	  it-IT backend language file
+; @description	  backend language file
 
 ; General
 PIZZABOX="GiBi PizzaBox"
@@ -119,6 +119,8 @@ PIZZABOX_SCHEMES="Schemi"
 ; Parts view
 PIZZABOX_PART="Parte"
 PIZZABOX_PARTS="Parti"
+PIZZABOX_PART_MIN="Min"
+PIZZABOX_PART_MAX="Max"
 
 ; Flavours view
 PIZZABOX_FLAVOUR="Gusto"
