--- a/component/frontend/language/it-IT.com_pizzabox.ini
+++ b/component/frontend/language/it-IT.com_pizzabox.ini
@@ -62,6 +62,7 @@ PIZZABOX_CHANGE_STATUS_SUCCESS="Ho cambiato con successo lo stato di %s elemento
 PIZZABOX_CHANGE_STATUS_ERROR="Errore durante il cambiamento di stato"
 PIZZABOX_REMOVE_SUCCESS="Ho cancellato con successo %s elemento/i"
 PIZZABOX_REMOVE_ERROR="Errore durante la cancellazione"
+PIZZABOX_CONFIRM_DELETE="Vuoi davvero rimuovere questo contenitore?"
 
 ; Orders management
 PIZZABOX_HIDE_TOOLBAR="Nascondi barra degli strumenti"
