--- a/component/backend/language/en-GB/en-GB.com_pizzabox.ini
+++ b/component/backend/language/en-GB/en-GB.com_pizzabox.ini
@@ -108,6 +108,8 @@ PIZZABOX_MANAGE_STATUS="Manage status"
 PIZZABOX_CONTAINER="Container"
 PIZZABOX_CONTAINER_SELECT="Select container"
 PIZZABOX_CONTAINERS="Containers"
+PIZZABOX_PART_MIN="Minimum quantity"
+PIZZABOX_PART_MAX="Maximum quantity"
 
 ; Schemes view
 PIZZABOX_SCHEME="Scheme"
