--- a/component/backend/language/it-IT/it-IT.com_pizzabox.ini
+++ b/component/backend/language/it-IT/it-IT.com_pizzabox.ini
@@ -108,6 +108,8 @@ PIZZABOX_MANAGE_STATUS="Gestisci stati"
 PIZZABOX_CONTAINER="Contenitore"
 PIZZABOX_CONTAINER_SELECT="Seleziona contenitore"
 PIZZABOX_CONTAINERS="Contenitori"
+PIZZABOX_PART_MIN="Quantità minima"
+PIZZABOX_PART_MAX="Quantità massima"
 
 ; Schemes view
 PIZZABOX_SCHEME="Schema"
