--- a/component/backend/language/it-IT/it-IT.com_pizzabox.ini
+++ b/component/backend/language/it-IT/it-IT.com_pizzabox.ini
@@ -138,7 +138,7 @@ PIZZABOX_STATUS_SELECT="Seleziona stato"
 PIZZABOX_STATUS_CHANGE="Cambia stato"
 PIZZABOX_ORDER_DATE_FROM="Data ordine da"
 PIZZABOX_ORDER_DATE_TO="A"
-PIZZABOX_DELIVERY_DATE_FROM="Data ordine da"
+PIZZABOX_DELIVERY_DATE_FROM="Data consegna da"
 PIZZABOX_DELIVERY_DATE_TO="A"
 
 ; Status view
