Added Bootstrap classes to frontend views

--- a/component/backend/language/en-GB/en-GB.com_pizzabox.sys.ini
+++ b/component/backend/language/en-GB/en-GB.com_pizzabox.sys.ini
@@ -13,7 +13,7 @@ COM_PIZZABOX_DESCRIPTION="<img src='http://extensions.gibilogic.com/images/gibil
 COM_PIZZABOX_CONTAINERS="Containers"
 COM_PIZZABOX_SCHEMES="Schemes"
 COM_PIZZABOX_PARTS="Parts"
-COM_PIZZABOX_FLAVOURS="Flavorus"
+COM_PIZZABOX_FLAVOURS="Flavours"
 COM_PIZZABOX_ORDERS="Orders"
 COM_PIZZABOX_ORDERSTATUS="Order status"
 
