--- a/component/backend/language/it-IT/it-IT.com_pizzabox.sys.ini
+++ b/component/backend/language/it-IT/it-IT.com_pizzabox.sys.ini
@@ -1,11 +1,9 @@
-; @version		    $Id: it-IT.com_pizzabox.sys.ini 2012-09-02 14:48:00Z zanardi $
+; @version		    backend/it-IT.com_pizzabox.sys.ini 2013-07-07 19:43:00Z zanardi
 ; @package		    GiBi PizzaBox
-; @author         GiBiLogic snc
-; @authorEmail    info@gibilogic.com
+; @author         GiBiLogic <info@gibilogic.com>
 ; @authorUrl      http://www.gibilogic.com
-; @copyright	    Copyright (C) 2011-2012 GiBiLogic. All rights reserved.
+; @copyright	    (C) 2011-2013 GiBiLogic. All rights reserved.
 ; @license		    GNU/GPL v2 or later
-; @description	  it-IT backend system language file
 
 PIZZABOX="GiBi PizzaBox"
 COM_PIZZABOX="GiBi PizzaBox"
