--- a/component/frontend/language/en-GB.com_pizzabox.ini
+++ b/component/frontend/language/en-GB.com_pizzabox.ini
@@ -63,6 +63,7 @@ PIZZABOX_CHANGE_STATUS_ERROR="An error happened while changing status"
 PIZZABOX_REMOVE_SUCCESS="Successfullly removed %s item(s)"
 PIZZABOX_REMOVE_ERROR="An error happened while removing item(s)"
 PIZZABOX_CONFIRM_DELETE="Do you realy want to remove this container?"
+PIZZABOX_EMPTY_ORDER="Your order is empty"
 
 ; Orders management
 PIZZABOX_HIDE_TOOLBAR="Hide toolbar"
