--- a/component/frontend/language/it-IT.com_pizzabox.ini
+++ b/component/frontend/language/it-IT.com_pizzabox.ini
@@ -63,6 +63,7 @@ PIZZABOX_CHANGE_STATUS_ERROR="Errore durante il cambiamento di stato"
 PIZZABOX_REMOVE_SUCCESS="Ho cancellato con successo %s elemento/i"
 PIZZABOX_REMOVE_ERROR="Errore durante la cancellazione"
 PIZZABOX_CONFIRM_DELETE="Vuoi davvero rimuovere questo contenitore?"
+PIZZABOX_EMPTY_ORDER="Nessun elemento presente nell'ordine"
 
 ; Orders management
 PIZZABOX_HIDE_TOOLBAR="Nascondi barra degli strumenti"
