--- a/component/backend/language/en-GB/en-GB.com_pizzabox.ini
+++ b/component/backend/language/en-GB/en-GB.com_pizzabox.ini
@@ -63,6 +63,8 @@ PIZZABOX_CONFIG_FIELD_MAX_ORDERS_PER_INTERVAL_LABEL="Max order per interval"
 PIZZABOX_CONFIG_FIELD_MAX_ORDERS_PER_INTERVAL_DESC="Maximum orders for each delivery time interval"
 PIZZABOX_CONFIG_FIELD_NEXT_DAYS_NUMBER_LABEL="Next days #"
 PIZZABOX_CONFIG_FIELD_NEXT_DAYS_NUMBER_DESC="How many days show in the date selection"
+PIZZABOX_CONFIG_FIELD_SHOW_ADDRESS_LABEL="Show address form"
+PIZZABOX_CONFIG_FIELD_SHOW_ADDRESS_DESC="Show the delivery address form"
 
 PIZZABOX_CONFIG_FIELDSET_CURRENCY_TITLE="Currency"
 PIZZABOX_CONFIG_FIELD_CURRENCY_CODE_LABEL="Currency"
