--- a/component/backend/language/it-IT/it-IT.com_pizzabox.ini
+++ b/component/backend/language/it-IT/it-IT.com_pizzabox.ini
@@ -63,6 +63,8 @@ PIZZABOX_CONFIG_FIELD_MAX_ORDERS_PER_INTERVAL_LABEL="Max ordini per intervallo"
 PIZZABOX_CONFIG_FIELD_MAX_ORDERS_PER_INTERVAL_DESC="Numero massimo di ordini per ciascun intervallo di consegna"
 PIZZABOX_CONFIG_FIELD_NEXT_DAYS_NUMBER_LABEL="Numero di giorni"
 PIZZABOX_CONFIG_FIELD_NEXT_DAYS_NUMBER_DESC="Quanti giorni mostrare nella selezione della data"
+PIZZABOX_CONFIG_FIELD_SHOW_ADDRESS_LABEL="Mostra indirizzo consegna"
+PIZZABOX_CONFIG_FIELD_SHOW_ADDRESS_DESC="Mostra il pannello di inserimento dell'indirizzo di consegna"
 
 PIZZABOX_CONFIG_FIELDSET_CURRENCY_TITLE="Valuta"
 PIZZABOX_CONFIG_FIELD_CURRENCY_CODE_LABEL="Valuta"
