--- a/component/frontend/language/it-IT.com_pizzabox.ini
+++ b/component/frontend/language/it-IT.com_pizzabox.ini
@@ -64,6 +64,7 @@ PIZZABOX_REMOVE_SUCCESS="Ho cancellato con successo %s elemento/i"
 PIZZABOX_REMOVE_ERROR="Errore durante la cancellazione"
 PIZZABOX_CONFIRM_DELETE="Vuoi davvero rimuovere questo contenitore?"
 PIZZABOX_EMPTY_ORDER="Nessun elemento presente nell'ordine"
+PIZZABOX_EMPTY_FLAVOUR="Nessun elemento selezionato"
 
 ; Orders management
 PIZZABOX_HIDE_TOOLBAR="Nascondi barra degli strumenti"
