--- a/component/frontend/language/en-GB.com_pizzabox.ini
+++ b/component/frontend/language/en-GB.com_pizzabox.ini
@@ -1,9 +1,8 @@
-; @version		    $Id: en-GB.com_pizzabox.ini 2012-11-06 09:49:00Z zanardi $
+; @version		    en-GB.com_pizzabox.ini 2013-11-23 22:48:00 UTC zanardi
 ; @package		    GiBi PizzaBox
-; @author         GiBiLogic snc
-; @authorEmail    info@gibilogic.com
+; @author         GiBiLogic <info@gibilogic.com>
 ; @authorUrl      http://www.gibilogic.com
-; @copyright	    Copyright (C) 2011-2012 GiBiLogic. All rights reserved.
+; @copyright	    (C) 2011-2013 GiBiLogic. All rights reserved.
 ; @license		    GNU/GPL v2 or later
 ; @description	  en-GB frontend language file
 
@@ -42,7 +41,7 @@ PIZZABOX_PAYPAL="Pay with PayPal"
 PIZZABOX_ORDER_TOTAL="Order total"
 
 PIZZABOX_DELIVERY_ADDRESS="Delivery address (optional)"
-PIZZABOX_DELIVERY_ADDRESS_EMPTY="None"
+PIZZABOX_DELIVERY_ADDRESS_EMPTY="New"
 PIZZABOX_DELIVERY_ADDRESS_NAME="Name"
 PIZZABOX_DELIVERY_ADDRESS_STREET="Street"
 PIZZABOX_DELIVERY_ADDRESS_ZIP="ZIP Code"
