--- a/component/frontend/language/it-IT.com_pizzabox.ini
+++ b/component/frontend/language/it-IT.com_pizzabox.ini
@@ -1,9 +1,8 @@
-; @version		    $Id: it-IT.com_pizzabox.ini 2012-11-06 09:50:00Z zanardi $
+; @version		    it-IT.com_pizzabox.ini 2013-11-23 22:48:00 UTC zanardi
 ; @package		    GiBi PizzaBox
-; @author         GiBiLogic snc
-; @authorEmail    info@gibilogic.com
+; @author         GiBiLogic <info@gibilogic.com>
 ; @authorUrl      http://www.gibilogic.com
-; @copyright	    Copyright (C) 2011-2012 GiBiLogic. All rights reserved.
+; @copyright	    (C) 2011-2013 GiBiLogic. All rights reserved.
 ; @license		    GNU/GPL v2 or later
 ; @description	  it-IT frontend language file
 
@@ -42,7 +41,7 @@ PIZZABOX_PAYPAL="Paga con PayPal"
 PIZZABOX_ORDER_TOTAL="Totale ordine"
 
 PIZZABOX_DELIVERY_ADDRESS="Indirizzo di consegna (opzionale)"
-PIZZABOX_DELIVERY_ADDRESS_EMPTY="Nessuno"
+PIZZABOX_DELIVERY_ADDRESS_EMPTY="Nuovo"
 PIZZABOX_DELIVERY_ADDRESS_NAME="Nome"
 PIZZABOX_DELIVERY_ADDRESS_STREET="Via"
 PIZZABOX_DELIVERY_ADDRESS_ZIP="CAP"
