--- a/component/backend/language/en-GB/en-GB.com_pizzabox.ini
+++ b/component/backend/language/en-GB/en-GB.com_pizzabox.ini
@@ -35,6 +35,8 @@ PIZZABOX_ADDRESS_COUNTRY="Country"
 COM_PIZZABOX_CONFIGURATION="GiBi PizzaBox configuration"
 
 PIZZABOX_CONFIG_FIELDSET_COMPONENT_TITLE="Basic options"
+PIZZABOX_CONFIG_FIELD_ORDER_NAME_MANDATORY="Order name mandatory"
+PIZZABOX_CONFIG_FIELD_ORDER_NAME_MANDATORY_DESC="Makes the order name mandatory"
 PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_LABEL="E-mail notification"
 PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_DESC="Enable e-mail notification when a new order is created"
 PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_LABEL="E-mail address"
