--- a/component/backend/language/it-IT/it-IT.com_pizzabox.ini
+++ b/component/backend/language/it-IT/it-IT.com_pizzabox.ini
@@ -35,6 +35,8 @@ PIZZABOX_ADDRESS_COUNTRY="Nazione"
 COM_PIZZABOX_CONFIGURATION="Configurazione GiBi PizzaBox"
 
 PIZZABOX_CONFIG_FIELDSET_COMPONENT_TITLE="Opzioni di base"
+PIZZABOX_CONFIG_FIELD_ORDER_NAME_MANDATORY="Nome ordine obbligatorio"
+PIZZABOX_CONFIG_FIELD_ORDER_NAME_MANDATORY_DESC="Rende il nome dell'ordine obbligatorio"
 PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_LABEL="Notifica e-mail"
 PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_DESC="Abilita la notifica via e-mail alla creazione di un nuovo ordine"
 PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_LABEL="Indirzzi e-mail"
