--- a/component/frontend/language/en-GB.com_pizzabox.ini
+++ b/component/frontend/language/en-GB.com_pizzabox.ini
@@ -22,6 +22,7 @@ PIZZABOX_NO_TIMES_AVAILABLE="No times available for selected date! Go back and s
 PIZZABOX_NO_PARTS_AVAILABLE="Oops... the selected scheme does not have any part!<br />Please go back and select a different scheme / container."
 PIZZABOX_DELIVERY_TIME_SELECT="Select a time for your delivery"
 PIZZABOX_DELIVERY_NAME_SELECT="Set a name for this order (optional) and confirm"
+PIZZABOX_DELIVERY_NAME_SELECT_MANDATORY="Set a name for this order and confirm"
 PIZZABOX_NEXT="Next"
 PIZZABOX_ORDER_NOT_CONFIRMED_YET="Please note: your order is NOT confirmed yet."
 PIZZABOX_LEAVE_ORDER="Leave order"
