--- a/component/frontend/language/it-IT.com_pizzabox.ini
+++ b/component/frontend/language/it-IT.com_pizzabox.ini
@@ -22,6 +22,7 @@ PIZZABOX_NO_TIMES_AVAILABLE="Per la data scelta non abbiamo più orari disponibi
 PIZZABOX_NO_PARTS_AVAILABLE="Ops... lo schema selezionato non include nessuna parte!<br />Per favore, torna indietro e scegli un diverso schema / contenitore."
 PIZZABOX_DELIVERY_TIME_SELECT="Seleziona un&apos;ora di consegna"
 PIZZABOX_DELIVERY_NAME_SELECT="Imposta un nome per l'ordine (opzionale) e conferma"
+PIZZABOX_DELIVERY_NAME_SELECT_MANDATORY="Imposta un nome per l'ordine e conferma"
 PIZZABOX_NEXT="Avanti"
 PIZZABOX_ORDER_NOT_CONFIRMED_YET="Nota: il tuo ordine NON è ancora confermato"
 PIZZABOX_LEAVE_ORDER="Abbandona ordine"
