--- a/component/frontend/language/en-GB.com_pizzabox.ini
+++ b/component/frontend/language/en-GB.com_pizzabox.ini
@@ -89,4 +89,5 @@ PIZZABOX_REPEAT_OK="Order successfully copied"
 
 ; Email notification
 PIZZABOX_EMAIL_NOTIFICATION_SUBJECT="New order from PizzaBox"
-PIZZABOX_EMAIL_NOTIFICATION_BODY="A new order has been created in PizzaBox: <a href='%s'>view order</a>"
+PIZZABOX_EMAIL_NOTIFICATION_BODY="A new order has been created in PizzaBox:"
+PIZZABOX_EMAIL_NOTIFICATION_BODY_ORDER_DETAIL="View order"
