--- a/component/frontend/language/it-IT.com_pizzabox.ini
+++ b/component/frontend/language/it-IT.com_pizzabox.ini
@@ -89,4 +89,5 @@ PIZZABOX_REPEAT_OK="Ordine copiato correttamente"
 
 ; Email notification
 PIZZABOX_EMAIL_NOTIFICATION_SUBJECT="Nuovo ordine in PizzaBox"
-PIZZABOX_EMAIL_NOTIFICATION_BODY="Un nuovo ordine è stato inserito in PizzaBox: <a href='%s'>visualizza ordine</a>"
+PIZZABOX_EMAIL_NOTIFICATION_BODY="Un nuovo ordine è stato inserito in PizzaBox:"
+PIZZABOX_EMAIL_NOTIFICATION_BODY_ORDER_DETAIL="Visualizza ordine"
