--- a/component/backend/language/en-GB/en-GB.com_pizzabox.ini
+++ b/component/backend/language/en-GB/en-GB.com_pizzabox.ini
@@ -1,4 +1,4 @@
-; @version		    backend/en-GB.com_pizzabox.ini 2013-07-07 19:43:00Z zanardi
+; @version		    backend/en-GB.com_pizzabox.ini 2013-12-02 20:21:00 UTC zanardi
 ; @package		    GiBi PizzaBox
 ; @author         GiBiLogic <info@gibilogic.com>
 ; @authorUrl      http://www.gibilogic.com
@@ -40,7 +40,7 @@ PIZZABOX_CONFIG_FIELD_ORDER_NAME_MANDATORY_DESC="Makes the order name mandatory"
 PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_LABEL="E-mail notification"
 PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_DESC="Enable e-mail notification when a new order is created"
 PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_LABEL="E-mail address"
-PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_DESC="What e-mail address should receive the notification.<br/>If not set, the notification will be sent to all Joomla users that are set to receive system e-mails"
+PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_DESC="What e-mail address should receive the notification.<br/>If not set, the notification will be sent to all Joomla users that are set to receive system e-mails"
 
 PIZZABOX_CONFIG_FIELDSET_DELIVERY_TITLE="Delivery options"
 PIZZABOX_CONFIG_FIELD_TIME_ENABLED_LABEL="Time enabled"
@@ -142,6 +142,7 @@ PIZZABOX_ORDER_DATE_FROM="Order date from"
 PIZZABOX_ORDER_DATE_TO="To"
 PIZZABOX_DELIVERY_DATE_FROM="Delivery date from"
 PIZZABOX_DELIVERY_DATE_TO="To"
+PIZZABOX_NOTES="Notes"
 
 ; Status view
 PIZZABOX_ORDERSTATUS="Order status"
