--- a/component/backend/language/it-IT/it-IT.com_pizzabox.ini
+++ b/component/backend/language/it-IT/it-IT.com_pizzabox.ini
@@ -1,4 +1,4 @@
-; @version		    backend/it-IT.com_pizzabox.ini 2013-07-07 19:43:00Z zanardi
+; @version		    backend/it-IT.com_pizzabox.ini 2013-12-02 20:20:00 UTC zanardi
 ; @package		    GiBi PizzaBox
 ; @author         GiBiLogic <info@gibilogic.com>
 ; @authorUrl      http://www.gibilogic.com
@@ -40,7 +40,7 @@ PIZZABOX_CONFIG_FIELD_ORDER_NAME_MANDATORY_DESC="Rende il nome dell'ordine obbli
 PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_LABEL="Notifica e-mail"
 PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_DESC="Abilita la notifica via e-mail alla creazione di un nuovo ordine"
 PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_LABEL="Indirzzi e-mail"
-PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_DESC="L'indirizzo e-mail a cui mandare la notifica.<br/>Se non è impostato, la notifica verrà inviata a tutti gli utenti Joomla impostati per ricevere le e-mail di sistema"
+PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_DESC="L'indirizzo e-mail a cui mandare la notifica.<br/>Se non è impostato, la notifica verrà inviata a tutti gli utenti Joomla impostati per ricevere le e-mail di sistema"
 
 PIZZABOX_CONFIG_FIELDSET_DELIVERY_TITLE="Opzioni di consegna"
 PIZZABOX_CONFIG_FIELD_TIME_ENABLED_LABEL="Orario abilitato"
@@ -142,6 +142,7 @@ PIZZABOX_ORDER_DATE_FROM="Data ordine da"
 PIZZABOX_ORDER_DATE_TO="A"
 PIZZABOX_DELIVERY_DATE_FROM="Data consegna da"
 PIZZABOX_DELIVERY_DATE_TO="A"
+PIZZABOX_NOTES="Note"
 
 ; Status view
 PIZZABOX_ORDERSTATUS="Stati ordine"
