--- a/component/frontend/language/en-GB.com_pizzabox.ini
+++ b/component/frontend/language/en-GB.com_pizzabox.ini
@@ -1,9 +1,9 @@
-; @version		    en-GB.com_pizzabox.ini 2013-11-23 22:48:00 UTC zanardi
+; @version		    en-GB.com_pizzabox.ini 2014-02-15 11:05:00 UTC zanardi
 ; @package		    GiBi PizzaBox
 ; @author         GiBiLogic <info@gibilogic.com>
 ; @authorUrl      http://www.gibilogic.com
-; @copyright	    (C) 2011-2013 GiBiLogic. All rights reserved.
-; @license		    GNU/GPL v2 or later
+; @copyright	    (C) 2011-2014 GiBiLogic. All rights reserved.
+; @license		    GNU/GPL v3 or later
 ; @description	  en-GB frontend language file
 
 ; General
@@ -40,6 +40,10 @@ PIZZABOX_DELIVERY_DATETIME="Selected delivery date and time: <strong>%s</strong>
 PIZZABOX_ITEMS_PER_PAGE="Items per page"
 PIZZABOX_PAYPAL="Pay with PayPal"
 PIZZABOX_ORDER_TOTAL="Order total"
+
+; Flavours
+PIZZABOX_FLAVOURS_SELECT_FROM_TO="(select from %s to %s)"
+PIZZABOX_FLAVOURS_SELECT_NUMBER="(select %s)"
 
 PIZZABOX_DELIVERY_ADDRESS="Delivery address (optional)"
 PIZZABOX_DELIVERY_ADDRESS_EMPTY="New"
