--- a/component/frontend/language/it-IT.com_pizzabox.ini
+++ b/component/frontend/language/it-IT.com_pizzabox.ini
@@ -1,9 +1,9 @@
-; @version		    it-IT.com_pizzabox.ini 2013-11-23 22:48:00 UTC zanardi
+; @version		    it-IT.com_pizzabox.ini 2014-02-15 11:05:00 UTC zanardi
 ; @package		    GiBi PizzaBox
 ; @author         GiBiLogic <info@gibilogic.com>
 ; @authorUrl      http://www.gibilogic.com
-; @copyright	    (C) 2011-2013 GiBiLogic. All rights reserved.
-; @license		    GNU/GPL v2 or later
+; @copyright	    (C) 2011-2014 GiBiLogic. All rights reserved.
+; @license		    GNU/GPL v3 or later
 ; @description	  it-IT frontend language file
 
 ; General
@@ -40,6 +40,10 @@ PIZZABOX_DELIVERY_DATETIME="Data e ora di consegna selezionate: <strong>%s</stro
 PIZZABOX_ITEMS_PER_PAGE="Elementi per pagina"
 PIZZABOX_PAYPAL="Paga con PayPal"
 PIZZABOX_ORDER_TOTAL="Totale ordine"
+
+; Flavours
+PIZZABOX_FLAVOURS_SELECT_FROM_TO="(scegli da %s a %s)"
+PIZZABOX_FLAVOURS_SELECT_NUMBER="(scegli %s)"
 
 PIZZABOX_DELIVERY_ADDRESS="Indirizzo di consegna (opzionale)"
 PIZZABOX_DELIVERY_ADDRESS_EMPTY="Nuovo"
