Refs #10620 - add notification to customer

--- a/component/backend/language/it-IT/it-IT.com_pizzabox.ini
+++ b/component/backend/language/it-IT/it-IT.com_pizzabox.ini
@@ -1,4 +1,4 @@
-; @version		    backend/it-IT.com_pizzabox.ini 2013-12-02 20:20:00 UTC zanardi
+; @version		    backend/it-IT.com_pizzabox.ini 2014-07-23 09:23:00 UTC zanardi
 ; @package		    GiBi PizzaBox
 ; @author         GiBiLogic <info@gibilogic.com>
 ; @authorUrl      http://www.gibilogic.com
@@ -41,6 +41,8 @@ PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_LABEL="Notifica e-mail"
 PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_DESC="Abilita la notifica via e-mail alla creazione di un nuovo ordine"
 PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_LABEL="Indirzzi e-mail"
 PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_DESC="L'indirizzo e-mail a cui mandare la notifica.<br/>Se non è impostato, la notifica verrà inviata a tutti gli utenti Joomla impostati per ricevere le e-mail di sistema"
+PIZZABOX_CONFIG_FIELD_USER_EMAIL_NOTIFICATION_LABEL="Notifica utente"
+PIZZABOX_CONFIG_FIELD_USER_EMAIL_NOTIFICATION_DESC="Abilita la notifica via e-mail anche all'acquirente"
 
 PIZZABOX_CONFIG_FIELDSET_DELIVERY_TITLE="Opzioni di consegna"
 PIZZABOX_CONFIG_FIELD_TIME_ENABLED_LABEL="Orario abilitato"
