--- a/component/backend/language/en-GB/en-GB.com_pizzabox.ini
+++ b/component/backend/language/en-GB/en-GB.com_pizzabox.ini
@@ -1,4 +1,4 @@
-; @version		    backend/en-GB.com_pizzabox.ini 2013-12-02 20:21:00 UTC zanardi
+; @version		    backend/en-GB.com_pizzabox.ini 2014-07-23 09:23:00 UTC zanardi
 ; @package		    GiBi PizzaBox
 ; @author         GiBiLogic <info@gibilogic.com>
 ; @authorUrl      http://www.gibilogic.com
@@ -41,6 +41,8 @@ PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_LABEL="E-mail notification"
 PIZZABOX_CONFIG_FIELD_EMAIL_NOTIFICATION_DESC="Enable e-mail notification when a new order is created"
 PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_LABEL="E-mail address"
 PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_DESC="What e-mail address should receive the notification.<br/>If not set, the notification will be sent to all Joomla users that are set to receive system e-mails"
+PIZZABOX_CONFIG_FIELD_USER_EMAIL_NOTIFICATION_LABEL="User notification"
+PIZZABOX_CONFIG_FIELD_USER_EMAIL_NOTIFICATION_DESC="Enable e-mail notification to the customer as well"
 
 PIZZABOX_CONFIG_FIELDSET_DELIVERY_TITLE="Delivery options"
 PIZZABOX_CONFIG_FIELD_TIME_ENABLED_LABEL="Time enabled"
