--- a/component/backend/language/en-GB/en-GB.com_pizzabox.ini
+++ b/component/backend/language/en-GB/en-GB.com_pizzabox.ini
@@ -43,6 +43,8 @@ PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_LABEL="E-mail address"
 PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_DESC="What e-mail address should receive the notification.<br/>If not set, the notification will be sent to all Joomla users that are set to receive system e-mails"
 PIZZABOX_CONFIG_FIELD_USER_EMAIL_NOTIFICATION_LABEL="User notification"
 PIZZABOX_CONFIG_FIELD_USER_EMAIL_NOTIFICATION_DESC="Enable e-mail notification to the customer as well"
+PIZZABOX_CONFIG_FIELD_EMAIL_INCLUDES_ORDER_LABEL="Include order in email"
+PIZZABOX_CONFIG_FIELD_EMAIL_INCLUDES_ORDER_DESC="If enabled, the mail message includes full order details instead of just a link to see the order online"
 
 PIZZABOX_CONFIG_FIELDSET_DELIVERY_TITLE="Delivery options"
 PIZZABOX_CONFIG_FIELD_TIME_ENABLED_LABEL="Time enabled"
