--- a/component/backend/language/it-IT/it-IT.com_pizzabox.ini
+++ b/component/backend/language/it-IT/it-IT.com_pizzabox.ini
@@ -43,6 +43,8 @@ PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_LABEL="Indirzzi e-mail"
 PIZZABOX_CONFIG_FIELD_EMAIL_ADDRESS_DESC="L'indirizzo e-mail a cui mandare la notifica.<br/>Se non è impostato, la notifica verrà inviata a tutti gli utenti Joomla impostati per ricevere le e-mail di sistema"
 PIZZABOX_CONFIG_FIELD_USER_EMAIL_NOTIFICATION_LABEL="Notifica utente"
 PIZZABOX_CONFIG_FIELD_USER_EMAIL_NOTIFICATION_DESC="Abilita la notifica via e-mail anche all'acquirente"
+PIZZABOX_CONFIG_FIELD_EMAIL_INCLUDES_ORDER_LABEL="Includi ordine in email"
+PIZZABOX_CONFIG_FIELD_EMAIL_INCLUDES_ORDER_DESC="Se abilitato, la mail conterrà il dettaglio completo dell'ordine anzichè semplicemente un link per visualizzare l'ordine sul sito"
 
 PIZZABOX_CONFIG_FIELDSET_DELIVERY_TITLE="Opzioni di consegna"
 PIZZABOX_CONFIG_FIELD_TIME_ENABLED_LABEL="Orario abilitato"
